--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
@@ -47,4 +47,11 @@ mat-option{
   font-size: 10px;
   
 }
-/*------------*/
+#emailModal{
+  overflow-y: auto;
+}
+
+#adsBtn{
+
+  padding: .4rem 1.4rem;
+}
