--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -43,7 +43,7 @@
       <ul class="navbar-nav nav-flex-icons">
 
 
-        <li id="paddingListId" *ngIf="!authenticatedName"  (click)="goToLogin()" class="nav-item">
+        <li id="paddingListId" *ngIf="!authenticatedName"  data-toggle="modal" data-target="#loginModal" class="nav-item">
           <a href="JavaScript:Void(0)" class="nav-link waves-effect">Sign in
           </a>
         </li>
@@ -675,29 +675,32 @@
         <div class="row d-flex justify-content-center align-items-center">
 
 
-          <a type="button" mdbBtn color="primary" outline="true" class="waves-light" mdbWavesEffect data-dismiss="modal" (click)="admin.hide()"
-          (click)="addProductModal.show()">Add product</a>
+          <button id="adsBtn" type="button" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+          (click)="addProductModal.show()">Add product</button>
 
-            <a type="button" mdbBtn color="primary" outline="true" class="waves-light" mdbWavesEffect data-dismiss="modal" (click)="admin.hide()"
-             (click)="addCarouselModal.show()">Edit carousel</a>
+            <button id="adsBtn" type="button" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+             (click)="addCarouselModal.show()">Edit carousel</button>
 
-            <a type="button" mdbBtn color="primary" outline="true" class="waves-light" mdbWavesEffect 
-            href="manageCheckout">Manage checkout</a>
+           <a href="manageCheckout"> <button id="adsBtn" type="button" class="btn btn-outline-primary">Manage checkout</button></a>
 
-
-            <a type="button" mdbBtn color="primary" outline="true" class="waves-light" mdbWavesEffect data-dismiss="modal" (click)="admin.hide()"
-            data-toggle="modal" data-target="#FbModal">Edit Fb link</a>
+            <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+            data-toggle="modal" data-target="#FbModal">Edit Fb link</button>
             
-            <a type="button" mdbBtn color="primary" outline="true" class="waves-light" mdbWavesEffect data-dismiss="modal" (click)="admin.hide()"
-            data-toggle="modal" data-target="#twitterModal">Edit twitter link</a>
+            <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+            data-toggle="modal" data-target="#twitterModal">Edit twitter link</button>
             
-            <a type="button" mdbBtn color="primary" outline="true" class="waves-light" mdbWavesEffect href="sellToUs">Third party product</a>
-    
+
+            <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+             data-toggle="modal" data-target="#deleteCategory">Delete category</button>
+            
+
+
+            <a href="sellToUs"><button id="adsBtn" type="button" class="btn btn-outline-primary">Third party product</button> </a>
 
 
 
-          <a type="button" mdbBtn color="primary" outline="true" class="waves-light" mdbWavesEffect
-            data-dismiss="modal" (click)="admin.hide()">Close</a>
+          <button type="button" class="btn btn-outline-primary"
+            data-dismiss="modal" (click)="admin.hide()">Close</button>
 
 
 
@@ -735,3 +738,78 @@
   </div>
 </div>
 <!--//Modal: Logout with Avatar Form-->
+
+
+
+
+
+
+
+
+<!--Modal: loginModal-->
+<div class="modal fade top" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true" data-backdrop="true">
+  <div class="modal-dialog modal-frame modal-top modal-notify modal-info" role="document">
+    <!--Content-->
+    <div class="modal-content">
+      <!--Body-->
+      <div class="modal-body">
+        <div class="row d-flex justify-content-center align-items-center">
+
+          <a type="button" (click)="loginFb()" data-dismiss="modal" class="btn btn-primary">Login with facebook <i class="fab fa-facebook-f"></i></a>
+          <a type="button" (click)="loginGoogle()" data-dismiss="modal" class="btn btn-success">Login with google <i class="fab fa-google"></i></a>
+
+          <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">No, thanks</a>
+        </div>
+      </div>
+    </div>
+    <!--/.Content-->
+  </div>
+</div>
+<!--Modal: loginModal-->
+
+
+
+
+
+<!-- Modal: Delete category -->
+<div class="modal fade" id="deleteCategory" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">All categories</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body">
+
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Category name</th>
+              <th>Remove</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let c of categories">
+              <td>{{c.category}}</td>
+              <td><a><i (click)="deleteCategory(c.id)" class="fas fa-times"></i></a></td>
+            </tr>
+            
+          </tbody>
+        </table>
+
+      </div>
+      <!--Footer-->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Close</button>
+    
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal: modalCart -->
