footer update completed

--- a/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.scss
@@ -2,5 +2,14 @@
 .page-footer{background-color:#929FBA;
 padding-top: 15vh;}
 
+#qlink{
+    margin-left: 100px;
+}
 
-
+#cn{
+    margin-left: 150px;
+}
+#sicon{
+    padding: 20px;
+    margin-right: 20px;
+}
