--- a/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
@@ -1,35 +1,123 @@
+<!--Footer-->
+<footer class="page-footer font-small mt-4 wow slideInUp">
 
+  <div class="row">
+    <div class="col-sm-6  col-md-6 col-lg-6">
+<h4 id="cn">TizaraMart Contacts</h4><br>
+      <h6 id="cn" *ngFor="let phone of phones" ><i class="fas fa-phone-alt"></i> +88{{phone.phone}}</h6><br>
+     
 
-
-
- <!--Footer-->
- <footer class="page-footer text-center font-small mt-4 wow fadeIn">
-
-    <!--Call to action-->
-   <h6>Mobile : +8801795667374</h6><br>
-   <h6>Mobile : +8801795667374</h6><br>
-   <h6>Mobile : +8801795667374</h6><br>
-   <h6>Mobile : +8801795667374</h6><br>
-    <!--/.Call to action-->
-
-    <hr class="my-4">
-
-    <!-- Social icons -->
-    <div class="pb-4">
-      <a href="https://www.facebook.com/mdbootstrap" target="_blank">
-        <i class="fab fa-facebook-f mr-3"></i>
-      </a>
-
-      <a href="https://twitter.com/MDBootstrap" target="_blank">
-        <i class="fab fa-twitter mr-3"></i>
-      </a>
-
-      <a href="https://www.youtube.com/watch?v=7MUISDJ5ZZ4" target="_blank">
-        <i class="fas fa-envelope mr-3"></i>
-      </a>
+      <h6 id="cn" *ngFor="let email of emails"><i class="fas fa-envelope"></i> {{email.email}}</h6><br>
     </div>
-    <!-- Social icons -->
 
 
-  </footer>
-  <!--/.Footer-->
+    <div class="col-sm-6  col-md-6 col-lg-6">
+
+  <h4 id="qlink">Quick Links</h4><br>
+  
+  
+  <a href="" target="_blank"><h6 id="qlink">Home</h6></a><br>
+  <a href="aboutUs" target="_blank"><h6 id="qlink">About Us</h6></a><br>
+  
+  <a href="ourProducts" target="_blank"><h6 id="qlink">Our Products</h6></a><br>
+  
+  <a href="contactUs" target="_blank"><h6 id="qlink">Contact Us</h6></a><br>
+
+
+
+    </div>
+
+  </div>
+
+
+
+
+  <!--/.Call to action-->
+
+  <hr class="my-4">
+
+  <!-- Social icons -->
+  <div class="pb-4 text-center">
+    <a id="sicon" href="{{fbLink.fblink}}" target="_blank">
+      <i class="fab fa-facebook-f mr-3"></i>
+    </a>
+
+    <a id="sicon" href="{{twitterLink.twitter}}" target="_blank">
+      <i class="fab fa-twitter mr-3"></i>
+    </a>
+
+    <a id="sicon" href="JavaScript:Void(0)"  data-toggle="modal" data-target="#emailModal">
+      <i class="fas fa-envelope mr-3"></i>
+    </a>
+  </div>
+  <!-- Social icons -->
+
+
+
+
+
+
+
+
+
+<!--email modal-->
+
+
+
+<div class="modal fade" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+     
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Send email to us </h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="refreshEmail()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+
+      <div class="modal-body mx-3">
+
+          <div class="md-form mb-4">
+              <i class="fas fa-user-circle prefix grey-text"></i>
+            <input mdbInput type="text" id="user" [(ngModel)]="emailSending.name" class="form-control validate">
+              <label data-error="wrong" data-success="right" for="user">Your name</label>
+            </div>
+    
+
+
+
+        <div class="md-form mb-5">
+          <i class="fas fa-envelope prefix grey-text"></i>
+          <input mdbInput type="email" id="mail" [(ngModel)]="emailSending.from" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="mail">Your email</label>
+        </div>
+
+        <div class="md-form mb-4">
+            <i class="fas fa-phone prefix grey-text"></i>
+          <input mdbInput type="text" id="phn" [(ngModel)]="emailSending.phone" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="phn">Your phone</label>
+        </div>
+
+
+        <div class="md-form mb-4">
+            <i class="far fa-comment prefix grey-text"></i>
+            <textarea mdbInput type="text" class="md-textarea form-control" rows="2" id="msg" [(ngModel)]="emailSending.message"></textarea>
+            <label data-error="wrong" data-success="right" for="msg">Your message</label>
+          </div>
+
+
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-default" 
+        [disabled]="!(emailSending.name && emailSending.phone && emailSending.from && emailSending.message)" (click)="sendingEmail()" data-dismiss="modal" aria-label="Close">Send</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+</footer>
+<!--/.Footer-->
