--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -557,7 +557,7 @@
      
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Send email to us </h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="refreshEmail()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -590,14 +590,14 @@
         <div class="md-form mb-4">
             <i class="far fa-comment prefix grey-text"></i>
             <textarea mdbInput type="text" class="md-textarea form-control" rows="2" id="msg" [(ngModel)]="emailSending.message"></textarea>
-            <label data-error="wrong" data-success="right" for="phn">Your message</label>
+            <label data-error="wrong" data-success="right" for="msg">Your message</label>
           </div>
 
 
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-default" (click)="sendingEmail()" data-dismiss="modal" aria-label="Close">Send</button>
+        <button class="btn btn-default" [disabled]="!(emailSending.name && emailSending.phone && emailSending.from && emailSending.message)" (click)="sendingEmail()" data-dismiss="modal" aria-label="Close">Send</button>
       </div>
     </div>
   </div>
@@ -634,7 +634,7 @@
 
 
 
-<!--Fb modal-->
+<!--Twitter modal-->
 <div class="modal fade" id="twitterModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -663,10 +663,81 @@
 
 <!--//twitter modal-->
 
+
+<!--Phone modal-->
+<div class="modal fade" id="phoneModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Add phone number</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-5">
+            <i class="fas fa-phone-alt prefix grey-text"></i>
+          <input mdbInput type="text" [(ngModel)]="phone.phone" name="phone" id="phoneId" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="phoneId">Phone number</label>
+        </div>
+
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-default" [disabled]="!phone.phone" (click)="phoneSave()" data-dismiss="modal" aria-label="Close">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--//phone modal-->
+
+
+
+
+<!--Email modal-->
+<div class="modal fade" id="addEmailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Add email address</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-5">
+            <i class="fas fa-envelope  prefix grey-text"></i>
+          <input mdbInput type="text" [(ngModel)]="email.email" name="email" id="emailId" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="phoneId">Email address</label>
+        </div>
+
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-default" [disabled]="!email.email" (click)="emailSave()" data-dismiss="modal" aria-label="Close">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--//email modal-->
+
+
+
+
+
+
+
+
+
+
 <!--admin section modal-->
 
 <div mdbModal #admin="mdbModal" class="modal fade top modal-scrolling" id="frameModalTop" tabindex="-1"
-  role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" [config]="{backdrop: false, ignoreBackdropClick: true}">
+  role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="true">
   <div class="modal-dialog modal-frame modal-top modal-notify modal-info" role="document">
     <!--Content-->
     <div class="modal-content">
@@ -678,24 +749,49 @@
           <button id="adsBtn" type="button" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
           (click)="addProductModal.show()">Add product</button>
 
+
+
+
+          <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+          data-toggle="modal" data-target="#phoneModal">Add phone number</button>
+          
+
+
+          <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+          data-toggle="modal" data-target="#addEmailModal">Add email address</button>
+         
+
+
             <button id="adsBtn" type="button" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
              (click)="addCarouselModal.show()">Edit carousel</button>
 
-           <a href="manageCheckout"> <button id="adsBtn" type="button" class="btn btn-outline-primary">Manage checkout</button></a>
-
-            <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+             <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
             data-toggle="modal" data-target="#FbModal">Edit Fb link</button>
             
             <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
             data-toggle="modal" data-target="#twitterModal">Edit twitter link</button>
             
 
-            <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
-             data-toggle="modal" data-target="#deleteCategory">Delete category</button>
-            
+             
+
+
+             <a href="manageCheckout"> <button id="adsBtn" type="button" class="btn btn-outline-primary">Manage checkout</button></a>
 
 
             <a href="sellToUs"><button id="adsBtn" type="button" class="btn btn-outline-primary">Third party product</button> </a>
+
+
+
+
+            <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+             data-toggle="modal" data-target="#deleteCategory">Delete category</button>
+
+             <button type="button" id="adsBtn" class="btn btn-outline-primary" data-dismiss="modal" (click)="admin.hide()"
+             data-toggle="modal" data-target="#deleteContacts">Delete contacts</button>
+
+
+
+
 
 
 
@@ -812,4 +908,87 @@
     </div>
   </div>
 </div>
+<!-- Modal: modal delete category -->
+
+
+
+<!-- Modal: Delete contacts -->
+<div class="modal fade" id="deleteContacts" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">All contacts here </h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body">
+
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Phone numbers</th>
+              <th>Remove</th>
+            </tr>
+          
+          </thead>
+          <tbody>
+            <tr *ngFor="let p of phones">
+              <td>{{p.phone}}</td>
+              <td><a><i (click)="deletePhone(p.id)" class="fas fa-times"></i></a></td>
+            </tr>
+           
+            
+   
+
+          </tbody>
+
+
+
+
+
+
+
+          <thead>
+              <tr>
+                  <th>Email addresses</th>
+                  <th>Remove</th>
+                </tr>
+  
+            </thead>
+            <tbody>
+            
+  
+              <tr *ngFor="let e of emails">
+                  <td>{{e.email}}</td>
+                  <td><a><i (click)="deleteEmail(e.id)" class="fas fa-times"></i></a></td>
+                </tr>
+               
+  
+            </tbody>
+
+
+
+
+
+
+        </table>
+
+      </div>
+      <!--Footer-->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Close</button>
+    
+      </div>
+    </div>
+  </div>
+</div>
 <!-- Modal: modalCart -->
+
+
+
+
+
