--- a/E-Commerce-Front-End/E-Commerce-App/src/app/selltous/selltous.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/selltous/selltous.component.html
@@ -3,7 +3,7 @@
       <section class="text-center mb-4">
 
         <!--Grid row -->
-        <div  class="row wow fadeIn">
+        <div  class="row wow rollIn">
 
           <!--Grid column -->
           <div *ngFor="let p of tpProducts" class="col-lg-3 col-md-6 mb-4">
