--- a/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.scss
@@ -1,3 +1,14 @@
 .card{
   padding-top: 20vh;
 }
+
+.card-title{
+  margin-left: 100px;
+ 
+}
+
+#cn{
+  padding-top: 100px;
+  padding-bottom: 20px;
+}
+
