--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
@@ -619,8 +619,6 @@
 
 
 
-<!--/Add product modal-->
-
 
 
 
@@ -630,4 +628,56 @@
 
   </main>
   <!--Main layout-->
+
+
+
+
+<!--Modal: valid msg  modal-->
+<div class="modal fade top" id="validMsgModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+aria-hidden="true" data-backdrop="true">
+<div class="modal-dialog modal-frame modal-top modal-notify modal-info" role="document">
+  <!--Content-->
+  <div class="modal-content">
+    <!--Body-->
+    <div class="modal-body">
+      <div class="row d-flex justify-content-center align-items-center">
+
+        <p class="pt-3 pr-2">Your operation has been completed successfully !</p>
+
+        <button type="button" id="msgOKbtn" class="btn btn-outline-success" data-dismiss="modal">Ok, thanks</button>
+      </div>
+    </div>
+  </div>
+  <!--/.Content-->
+</div>
+</div>
+<!--Modal: validMsgModal modal-->
+
+
+
+<!--Modal: error msg  modal-->
+<div class="modal fade top" id="errorMsgModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+aria-hidden="true" data-backdrop="true">
+<div class="modal-dialog modal-frame modal-top modal-notify modal-info" role="document">
+  <!--Content-->
+  <div class="modal-content">
+    <!--Body-->
+    <div class="modal-body">
+      <div class="row d-flex justify-content-center align-items-center">
+
+        <p class="pt-3 pr-2">Your operation has not been completed successfully !</p>
+
+        <button type="button" id="msgOKbtn" class="btn btn-outline-success" data-dismiss="modal">Ok, thanks</button>
+      </div>
+    </div>
+  </div>
+  <!--/.Content-->
+</div>
+</div>
+<!--Modal: errorMsgModal modal-->
+
+
+
+
+
 
