--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
@@ -1,4 +1,6 @@
-
+nav{
+  background: #F2FFD3;
+}
 #navPhoto{
   width: 25px;
   height: 25px;;
@@ -61,4 +63,10 @@ mat-option{
   padding: .2rem 1rem;
 }
 
+
+
+#logoId{
+  width: 150px;
+  height: 70px;
+}
 
