--- a/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.html
@@ -9,8 +9,8 @@
 
     <!-- Card image -->
     <div class="view overlay">
-      <img class="card-img-top" src="assets/tizara.jpg" alt="Card image cap">
-      <a href="#!">
+      <img class="card-img-top" src="assets/tijara.jpg" alt="Card image cap">
+      <a href="JavaScript:Void(0)">
         <div class="mask rgba-white-slight"></div>
       </a>
     </div>
@@ -47,6 +47,36 @@ Stay safe
   <!-- Card -->
 
 
+
+
+
+
+
+
+
+  <!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      xfbml            : true,
+      version          : 'v5.0'
+    });
+  };
+
+  (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="110261810396463">
+</div>
 
 
 
