--- a/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.html
@@ -4,7 +4,7 @@
   <!-- Card image -->
   <div class="view view-cascade overlay">
     <img class="card-img-top" src="http://localhost:8080/getPhotos/{{googleMap.gMap}}" alt="Card image cap">
-    <a href="#!">
+    <a href="JavaScript:Void(0)">
       <div class="mask rgba-white-slight"></div>
     </a>
   </div>
