--- a/E-Commerce-Front-End/E-Commerce-App/src/app/product-details/product-details.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/product-details/product-details.component.html
@@ -104,28 +104,58 @@
           <!--Content-->
           <div class="p-4">
 
-            <div class="mb-3">
-              <a href="JavaScript:Void(0)">
-                <span id="badgeColor" class="badge purple mr-1">Category 2</span>
-              </a>
-              <a href="JavaScript:Void(0)">
-                <span id="badgeColor" class="badge blue mr-1">New</span>
-              </a>
-              <a href="JavaScript:Void(0)">
-                <span id="badgeColor" class="badge red mr-1">Bestseller</span>
-              </a>
-            </div>
+            <p class="lead">
+              <span class="mr-1">
+                <span><b>Category : </b></span>
+              </span>
+              <span>{{product.category}}</span>
+            </p>
+
+
+
+            <p class="lead">
+                <span class="mr-1">
+                  <span><b>Brand : </b></span>
+                </span>
+                <span>{{product.brand}}</span>
+              </p>
+            
+            <p class="lead">
+              <span class="mr-1">
+                <span><b>Name : </b></span>
+              </span>
+              <span>{{product.name}}</span>
+            </p>
+
+
+            <p class="lead">
+                <span class="mr-1">
+                  <span><b>Color : </b></span>
+                </span>
+                <span>{{product.color}}</span>
+              </p>
+  
+
+
 
             <p class="lead">
               <span class="mr-1">
+                  <span><b>Single price : </b></span>
                 <del>{{product.marketPrice}} Tk.</del>
               </span>
               <span>{{product.soldPrice}} Tk.</span>
             </p>
 
-            <p class="lead font-weight-bold">Description</p>
 
-            <p>{{product.description}}</p>
+
+
+
+            <p class="lead">
+                <span class="mr-1">
+                  <span><b>Description : </b></span>
+                </span>
+                <span>{{product.description}}</span>
+              </p>
 
 
             <form class="d-flex justify-content-left">
@@ -147,40 +177,6 @@
       </div>
       <!--Grid row-->
 
-      <hr>
-
-      <!--Grid row-->
-      <div class="row d-flex justify-content-center wow fadeIn">
-
-        <!--Grid column-->
-        <div class="col-md-6 text-center">
-
-          <h4 class="my-4 h4">Additional information</h4>
-
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus suscipit modi sapiente illo soluta odit
-            voluptates,
-            quibusdam officia. Neque quibusdam quas a quis porro? Molestias illo neque eum in laborum.</p>
-
-        </div>
-        <!--Grid column-->
-
-      </div>
-      <!--Grid row-->
-
-      <!--Grid row-->
-      <div class="row wow fadeIn">
-
-        <!--Grid column-->
-        <div *ngFor="let pbc of products" class="col-lg-4 col-md-12 mb-4">
-
-          <img src="http://localhost:8080/getPhotos/{{pbc.frontCode}}" class="img-fluid" alt="">
-
-        </div>
-        <!--Grid column-->
-
-
-      </div>
-      <!--Grid row-->
 
     </div>
   </main>
